Fixed the banner height on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -138,6 +138,12 @@ BANNER
   margin: 0 auto;
 }
 
+@media screen and (max-width: 991px) {
+  #banner {
+    height: 90vh;
+  }
+}
+
 /* ==========================================================================
 UPCOMMING EVENTS
 ========================================================================== */
